# game-recipe-book

./: .gitignore  README.md  game_style_prompts_500_ids_1_500.json  package.json  pyproject.toml
app/: auth.py  config.py  main.py  middleware.py  schemas.py
app/db/: __init__.py  models.py
app/routers/: auth.py  home.py  recipes.py
app/services/: recipe_service.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: index.html
backend/: main.py
